# amoba

./: .gitignore  Cargo.toml  README.md  ambient.toml
assets/: pipeline.toml
assets/anim/: Idle.fbx  Standing Torch Melee Attack 01.fbx  Walking.fbx
src/: _client.rs  _server.rs
src/creeps/: ambient.toml  server.rs
src/map/: client.rs
src/player/: ambient.toml  client.rs  server.rs
src/scene/: ambient.toml  client.rs  server.rs
src/ui/: ambient.toml  client.rs  server.rs
